@@ -1,1 +1,0 @@
-xvkbd.secure:	true
