@@ -1,0 +1,2 @@
+DIST florence-0.5.0.tar.bz2 479264 RMD160 fe6feef12eea4b0f5f8598f32ce90bd0f6414df1 SHA1 f5d2e0e2798b685992c49dff2749a5fd2d74841d SHA256 485416250e83104f44c917d63508fcf2ef2c45023777897fa637c7470fa6645c
+EBUILD florence-0.5.0.ebuild 1183 RMD160 87166594b40f196dd962e20fa478a7fd0d836649 SHA1 77ddb338b7124a68937f108a81c31baa61097f54 SHA256 fa1a9a95982d76c9a6a9ef917917dc6cd0c6f3262408ce4a952165b1ee09fe99
