@@ -1,4 +1,4 @@
 AUX i2p 489 RMD160 9d0f7eadd7d94d6cc0a460e3fac5cb3a16452794 SHA1 1060635e80faaafa0f7f6a6d6a2c584986cfc653 SHA256 49ffe6dcabbd724b1dcb8ef3434ff49b17795e21f9360387d90e6ad68ff7ee4e
 DIST i2psource_0.8.8.tar.bz2 19407244 RMD160 4eda44d98c860c93f34a45c891e6e138df338589 SHA1 b63660f3d8dbca679958c6bd1735a356fc2a74bd SHA256 522adf14aeac28281ec469f2f45c9d5ead73dd510784d5ad148aa505784a4394
 DIST jetty-5.1.15.tgz 11063548 RMD160 600062500383b985b0bfbb30d286aba3f6a6c1e4 SHA1 3a7a3de50f86f0cdb23c33aec632ea7f44132c5e SHA256 c866bfe7715941e343e66bd5d6696a743b9c0811ef9763848eb673070f4a53d6
-EBUILD i2p-0.8.8.ebuild 2986 RMD160 2ba4a1565cf4df6a63c029f8f10f10a3ac290599 SHA1 c5b623fd13f3f07de6e75c8b6c044d22b1ef48d1 SHA256 8b4a229da5f40c610b72f6dd5198d0300c17ddee6c844783570e4ed3bed3f472
+EBUILD i2p-0.8.8.ebuild 2957 RMD160 1ddd2bf690bfa02b1914fb77efab2149c2d5d694 SHA1 a210caac0c9717c119436c52340fce7229211a6e SHA256 7e330799b6c0e87e2e3c447b3574e0660f523f7efdad32a368d03f9877a61794
