@@ -25,6 +25,7 @@
   * Added SASL (plain) authentication and OTR encryption support to XChat
   * Added PPTP/OpenVPN/Cisco VPN support to NetworkManager
   * Added emelFM2 2-pane file manager
+  * Replaced xvkbd with Florence virtual keyboard
 
   * Audio mixer channels are heuristically set up on boot
   * Selected Tor-friendly IRC networks for XChat
